<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ru.itis.meshy.android.settings.AvatarPreference android:key="pref_key_avatar" />

	<Preference
		android:title="@string/display_settings_title"
		app:fragment="ru.itis.meshy.android.settings.DisplayFragment"
		app:icon="@drawable/ic_settings_brightness" />

	<Preference
		android:title="@string/network_settings_title"
		app:fragment="ru.itis.meshy.android.settings.ConnectionsFragment"
		app:icon="@drawable/ic_connect_without_contact" />

	<Preference
		android:title="@string/security_settings_title"
		app:fragment="ru.itis.meshy.android.settings.SecurityFragment"
		app:icon="@drawable/ic_settings_security" />

	<Preference
		android:title="@string/notification_settings_title"
		app:fragment="ru.itis.meshy.android.settings.NotificationsFragment"
		app:icon="@drawable/ic_notifications" />

	<PreferenceCategory
		android:key="pref_key_actions"
		android:layout="@layout/preferences_category"
		android:title="@string/pref_category_actions"
		app:allowDividerAbove="true">
		<Preference
			android:key="pref_key_share_app"
			android:title="@string/hotspot_title"
			app:icon="@drawable/ic_settings_share">
			<intent
				android:targetClass="ru.itis.meshy.android.hotspot.HotspotActivity"
				android:targetPackage="@string/app_package" />
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="pref_key_dev"
		android:layout="@layout/preferences_category"
		android:title="Developer Options"
		app:allowDividerAbove="true">

		<Preference
			android:key="pref_key_explode"
			android:title="Crash" />

	</PreferenceCategory>

	<Preference
		android:title="@string/about_title"
		app:allowDividerAbove="true"
		app:fragment="ru.itis.meshy.android.settings.AboutFragment"
		app:icon="@drawable/ic_info_dark" />

</PreferenceScreen>
